force-app/main/default/objects/AccountChangeNotification__e/AccountChangeNotification__e.object-meta.xml
<CustomObject>
    <label>AccountChangeNotification</label>
    <pluralLabel>AccountChangeNotifications</pluralLabel>
</CustomObject>