force-app/main/default/objects/AccountChangeNotification__e/fields/Dunbrdst_Reference__c.field-meta.xml
<CustomField>
    <fullName>Dunbrdst_Reference__c</fullName>
    <label>Dunbrdst Reference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>