force-app/main/default/objects/AccountChangeNotification__e/fields/Group_3_UMO__c.field-meta.xml
<CustomField>
    <fullName>Group_3_UMO__c</fullName>
    <label>Group 3 UMO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>