force-app/main/default/objects/AccountChangeNotification__e/fields/Insite__c.field-meta.xml
<CustomField>
    <fullName>Insite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insite</label>
    <type>Checkbox</type>
</CustomField>