force-app/main/default/objects/AccountChangeNotification__e/fields/KAM_Support__c.field-meta.xml
<CustomField>
    <fullName>KAM_Support__c</fullName>
    <label>CAM Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>