force-app/main/default/objects/AccountChangeNotification__e/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <label>LastModifiedById</label>
    <length>255</length>
    <type>Text</type>
</CustomField>