force-app/main/default/objects/AccountChangeNotification__e/fields/Manifest_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Manifest_Address_ID__c</fullName>
    <label>Manifest Address ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>