force-app/main/default/objects/AccountChangeNotification__e/fields/Manifest_Locality1__c.field-meta.xml
<CustomField>
    <fullName>Manifest_Locality1__c</fullName>
    <label>Manifest Locality1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>