force-app/main/default/objects/AccountChangeNotification__e/fields/Manifest_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Manifest_Post_Code__c</fullName>
    <label>Manifest Post Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>