force-app/main/default/objects/AccountChangeNotification__e/fields/Milkrun_Zone__c.field-meta.xml
<CustomField>
    <fullName>Milkrun_Zone__c</fullName>
    <label>Milkrun Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>