force-app/main/default/objects/AccountChangeNotification__e/fields/Operating_Segment__c.field-meta.xml
<CustomField>
    <fullName>Operating_Segment__c</fullName>
    <label>Operating Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>