force-app/main/default/objects/AccountChangeNotification__e/fields/ParentWinId__c.field-meta.xml
<CustomField>
    <fullName>ParentWinId__c</fullName>
    <label>ParentWinId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>