force-app/main/default/objects/AccountChangeNotification__e/fields/Pay_To_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Pay_To_Address_3__c</fullName>
    <label>Pay_To_Address_3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>