force-app/main/default/objects/AccountChangeNotification__e/fields/PayTo_Address2__c.field-meta.xml
<CustomField>
    <fullName>PayTo_Address2__c</fullName>
    <label>PayTo Address2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>