force-app/main/default/objects/AccountChangeNotification__e/fields/PO_Management_Support__c.field-meta.xml
<CustomField>
    <fullName>PO_Management_Support__c</fullName>
    <label>PO Management Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>