force-app/main/default/objects/AccountChangeNotification__e/fields/Primary_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service_Provider__c</fullName>
    <label>Primary Service Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>