force-app/main/default/objects/AccountChangeNotification__e/fields/Primary_SK_Branch__c.field-meta.xml
<CustomField>
    <fullName>Primary_SK_Branch__c</fullName>
    <label>Primary SK Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>