force-app/main/default/objects/AccountChangeNotification__e/fields/Secondary_ID__c.field-meta.xml
<CustomField>
    <fullName>Secondary_ID__c</fullName>
    <label>Secondary_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>