force-app/main/default/objects/AccountChangeNotification__e/fields/Territory_ID_SK__c.field-meta.xml
<CustomField>
    <fullName>Territory_ID_SK__c</fullName>
    <label>Territory ID SK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>